templates and svgs

--- a/layouts/meetup/archive.html
+++ b/layouts/meetup/archive.html
@@ -9,8 +9,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 nav nav-tags">
-            <h1 class="title">热门标签 <a class="rss fa fa-rss" href="/rss/feed-cn.xml" title="RSS Feed"></a></h1>
-            <a href="/bloglist-zh.html" class="all">ALL ({{ len $posts }})</a>
+            <h1 class="title">热门标签</h1>
+            <a href="/meetup" class="all">ALL ({{ len $posts }})</a>
             <ul class="tag-list f-cb">
                 <!-- Get all posts-->
               <!-- loop all tags that you've used -->
