--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -4,6 +4,7 @@
 {{$.Scratch.Set "nav_active" "blog"}}
 {{$.Scratch.Set "data_i18_cn" true }}
 {{$.Scratch.Set "data_i18_link" "/blog" }}
+
 <!-- <link href="/css/bloglist.css" rel="stylesheet"> -->
 {{ end }}
 
@@ -49,11 +50,11 @@
                 <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
                 <ul class="blog-post-meta">
                     <li class="meta-item">
-                      {{ partial "svgs/icon-date.svg" (dict "fill" "#fff" "width" 14 "height" 16 ) }}
+                      {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
                       {{ .Date.Format "2006-01-02" }}
                     </li>
                     <li class="meta-item">
-                       {{ partial "svgs/icon-author.svg" (dict "fill" "#fff" "width" 18 "height" 18 ) }}
+                       {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
                         {{/*
                             <!-- {{ range .Params.author }}
                               <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
