--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -33,9 +33,12 @@
                     <h1 class="title">{{ .Title }}</h1>
                     <ul class="blog-post-meta">
                         <li class="meta-item">
-                            <svg aria-hidden="true" class="octicon octicon-calendar" height="16" version="1.1" viewBox="0 0 14 16" width="14"><path fill-rule="evenodd" d="M13 2h-1v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H6v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H2c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm0 12H2V5h11v9zM5 3H4V1h1v2zm6 0h-1V1h1v2zM6 7H5V6h1v1zm2 0H7V6h1v1zm2 0H9V6h1v1zm2 0h-1V6h1v1zM4 9H3V8h1v1zm2 0H5V8h1v1zm2 0H7V8h1v1zm2 0H9V8h1v1zm2 0h-1V8h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1zm2 0h-1v-1h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1z"></path></svg>                            {{ .Date.Format "Mon, Jan 2, 2006" }}
+                          {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
+                          {{ .Date.Format "Mon, Jan 2, 2006" }}
                         </li>
-                        <li class="meta-item"><svg enable-background="new 0 0 139 139" viewBox="0 0 139 139" xmlns="http://www.w3.org/2000/svg"><circle cx="69.5" cy="52.2" fill="none" r="27.4" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m69.2 124.6c0 0 22 1.8 40.2-17.9 0 0 1.5-19.2-12.7-24.9l-9.9-4.7c0 0-1.1-1.9-.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m70 124.6c0 0-22 1.8-40.2-17.9 0 0-1.5-19.2 12.7-24.9l9.9-4.7c0 0 1.1-1.9.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/></svg>                            {{ .Params.author }}
+                        <li class="meta-item">
+                          {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
+                          {{ .Params.author }}
                         </li>
                     </ul>
                     <div class="blog-text">{{ .Content }}</div>
@@ -45,7 +48,7 @@
                     <div class="row">
                         <div class="f-thide">
                             <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
-                              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#fff" "width" 22 "height" 22 ) }}</i>分享
+                              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>分享
                             </a>
                         </div>
                     </div>
