--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -48,11 +48,11 @@
                 <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
                 <ul class="blog-post-meta">
                     <li class="meta-item">
-                        {{ partial "svgs/icon-date.svg" (dict "fill" "#fff" "width" 14 "height" 16 ) }}
+                        {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
                         {{ .Date.Format "2006-01-02" }}
                     </li>
                     <li class="meta-item">
-                      {{ partial "svgs/icon-author.svg" (dict "fill" "#fff" "width" 18 "height" 18 ) }}
+                      {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
                         {{/*
                             <!-- {{ range .Params.author }}
                               <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
